# automation_exercise_via_pytest-playwright

./: .gitignore  Dockerfile  README.md  conftest.py  pyproject.toml
.github/workflows/: tests.yml
config/: paths.py
endpoints/: all_brands_api.py  all_brands_list.py  all_product_list.py  all_products_api.py  base_endpoint.py  create_user_api.py  login_api.py  product_api.py  search_product_api.py
fixtures/: users.py
mixins/: subscription_mixin.py
pages/: base_page.py  cart_page.py  contact_us_page.py  home_page.py  login_or_signup_page.py  product_page.py  products_page.py  signup_page.py  test_cases_page.py
test_data/: simple_import.txt  user.py  users.py
tests/: conftest.py
tests/api/: conftest.py  test_brands.py  test_create_user.py  test_login.py  test_products.py  test_user_handling.py
tests/ui/: conftest.py  test_authentication.py  test_contact_us_form.py  test_login_successful.py  test_product_details.py  test_products_ui.py  test_register_user.py  test_subscription.py  test_test_cases_page.py
utils/: allure_reporting.py
